--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -54,7 +54,9 @@
                             <tbody th:with="link = ${pageRequestDTO.getLink()}">
                                 <tr th:each="dto:${responseDTO.dtoList}">
                                         <th scope="row">[[${dto.bno}]]</th>
-                                    <td><a class="text-decoration-none" th:href="|@{/board/read(bno=${dto.bno})}&${link}|">[[${dto.title}]]</a></td>
+                                    <td><a class="text-decoration-none" th:href="|@{/board/read(bno=${dto.bno})}&${link}|">[[${dto.title}]]</a>
+                                    <span class="badge progress-bar-success" style="background-color:#0a53be" th:text="${dto.replyCount}"></span>
+                                    </td>
                                     <td>[[${dto.writer}]]</td>
                                     <td th:text="${#temporals.format(dto.regDate,'yyyy-MM-dd')}"></td>
                                 </tr>
