--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -52,10 +52,13 @@
                             </tr>
                             </thead>
                             <tbody th:with="link = ${pageRequestDTO.getLink()}">
-                                <tr th:each="dto:${responseDTO.dtoList}">
+                                <tr th:each="dto : ${responseDTO.dtoList}">
                                         <th scope="row">[[${dto.bno}]]</th>
                                     <td><a class="text-decoration-none" th:href="|@{/board/read(bno=${dto.bno})}&${link}|">[[${dto.title}]]</a>
                                     <span class="badge progress-bar-success" style="background-color:#0a53be" th:text="${dto.replyCount}"></span>
+                                        <div th:if="${dto.boardImages != null && dto.boardImages.size() > 0}">
+                                            <img style="width:100px" th:each="boardImage: ${dto.boardImages}" th:src="|/view/s_${boardImage.uuid}_${boardImage.fileName}|">
+                                        </div>
                                     </td>
                                     <td>[[${dto.writer}]]</td>
                                     <td th:text="${#temporals.format(dto.regDate,'yyyy-MM-dd')}"></td>
