--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -54,6 +54,9 @@
                             </div>
                         </div>
                     </div><!--end card body-->
+                    <div class="card" th:if="${dto.fileNames != null && dto.fileNames.size() >0}">
+                        <img class="card-img-top" th:each="fileName: ${dto.fileNames}" th:src="|/view/${fileName}|"/>
+                    </div>
                 </div><!--end card -->
             </div><!--end col-->
         </div><!--end row-->
